[package]
name = "ark-guo"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-std ={ version = "0.5.0" }
ark-serialize = { version = "0.5.0", features = ["derive"] }
rayon = { version = "1.5.1", optional = true}
rug = { version = "1.27.0", features = ["integer", "std", "serde", "rand"] }
zeroize = { version = "1", default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
bincode = "1.3.3"


[features]

parallel = ["rayon", "ark-std/parallel", "ark-serialize/parallel" ]
